--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -261,4 +261,26 @@
     animation: scroll var(--duration, 40s) linear infinite;
   }
 
+.nav-link-underline::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -4px;
+  left: 0;
+  background-color: hsl(var(--primary));
+  transform-origin: center;
+  transition: transform 0.25s ease-out;
+}
+
+.nav-link-underline:hover::after {
+  transform: scaleX(1);
+  transform-origin: center;
+}
+
+.nav-link-underline.active::after {
+  transform: scaleX(1);
+  transform-origin: center;
+}
 
