--- a/src/components/layout/squares.css
+++ b/src/components/layout/squares.css
@@ -1,9 +1,9 @@
+
 .squares-canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -10;
-    pointer-events: all;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
