--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
 
   :root {
     --background: 225 47% 16%;
+    --background-rgb: 26, 33, 61;
     --foreground: 0 0% 98%;
     --card: 0 0% 13%;
     --card-foreground: 0 0% 98%;
@@ -36,6 +37,7 @@
 
   .dark {
     --background: 225 47% 16%;
+    --background-rgb: 26, 33, 61;
     --foreground: 0 0% 98%;
     --card: 0 0% 13%;
     --card-foreground: 0 0% 98%;
